    * Simplify upload example. (Alberto Simões, Sawyer X)

    [ BUG FIXES ]
    * GH #1255: Fix hook overriding in plugin. (Yves Orton)
    * GH #1191: Named capture prior to dispatch breaks dispatch.
      (Yves Orton)
    * GH #1235: Clean up descriptions for HTTP codes 303 and 305.
      (Yanick Champoux)
    * Remove duplicate (and errornous) 451 error message.
      (Sawyer X)

0.203001  2016-09-03 20:59:47-05:00 America/Chicago

    [ BUG FIXES ]
    * GH #1237: Specify minimum version of List::Util required for pair*
      functionals. (Russell @veryrusty Jenkins)

    [ ENHANCEMENTS ]
    * PR #1242: Replace Class::Load with Module::Runtime (Russell 
      Jenkins - @veryrusty)

0.203000  2016-08-24 22:09:56-05:00 America/Chicago

    [ BUG FIXES ]
    * GH #1232: Force deserialization of body data even when an existing 
      Plack::Request object has already parsed request body. Don't double
      decode deserialized data. (Russell Jenkins - @veryrusty)

    [ ENHANCEMENTS ]
    * GH #1195: Add change_session_id() method - both as a good security 
      practice and to comply with other established security standards.
      (Peter Mottram)
    * GH #1234: Add convenience functions to access Dancer's HTTP_CODES
      table. (Yanick Champoux)

    [ DOCUMENTATION ]
    * Fix Typo (Stefan Hornburg - Racke)
    * Document $session->data (Stefan Hornburg - Racke)
    
0.202000  2016-08-13 13:50:30-05:00 America/Chicago

    [ BUG FIXES ]
    * Fix memory leak in plugins. (Sawyer X)
    * GH #1180, #1220: Revert (most of) GH #1120. Change back to using
      MooX::Types::MooseLike until issues around Type::Tiny are resolved.
      Peter (@SysPete) Mottram
    * GH #1192: Decode body|query|request_parameters (Peter Mottram)
    * GH #1224: Plugins defined with :PluginKeyword attribute are now 
      exported. (Yanick Champoux)
    * GH #1226: Plugins can now call the DSL of the app via $self->dsl
      (Sawyer X)

    [ ENHANCEMENTS ]